projects/examples/source/02.38.cpp
//////////////////////////////////////////////////////////////////

#include <iostream>

//////////////////////////////////////////////////////////////////

void test_v1(int x, int y = 0)
{ 
	std::cout << "test_v1 : x = " << x << " y = " << y << '\n';
}

//////////////////////////////////////////////////////////////////

// void test_v2(int x = 0, int y) // error
// { 
//     std::cout << "test_v2 : x = " << x << " y = " << y << '\n';
// }

//////////////////////////////////////////////////////////////////

int main()
{
    test_v1(1   );

    test_v1(1, 2);

//  test_v2(1   ); // error

//  test_v2(1, 2); // error
}

//////////////////////////////////////////////////////////////////